<resources>
    <string name="app_name">Multy</string>
    <string name="wallets">wallets</string>
    <string name="feed">activity</string>
    <string name="contacts">contacts</string>
    <string name="settings">Settings</string>
    <string name="receive_btc">Receive BTC</string>
    <string name="send">Send</string>
    <string name="receive">Receive</string>
    <string name="exchange">Exchange</string>
    <string name="sha">SHA</string>
    <string name="sha_256">SHA-256</string>
    <string name="seed_continue">Continue</string>
    <string name="seed_phrase">Seed phrase</string>
    <string name="phrase_description">For security purpose we will show seed phrase in portions. Write down this words on paper and securely store it somewhere safe!</string>
    <string name="seed_tip_screenshot">Do not take screenshots</string>
    <string name="seed_tip_camera">Step away from the window and from the cameras</string>
    <string name="seed_tip_spy">Check that no one is behind you</string>
    <string name="seed_validation_hint">Type word here</string>
    <string name="seed_congrats">Congratulations!\nYour wallet is secure!</string>
    <string name="seed_congrats_restore">Congratulations!\nYour wallet is restored!</string>
    <string name="great">Great!</string>
    <string name="check_connection">Check Connection</string>
    <string name="check_internet_connection">Check Internet Connection</string>
    <string name="no_connection">Please connect your \ndevice to the internet</string>
    <string name="seed_result_fail">Wrong seed phrase!</string>
    <string name="seed_writing">Seed phrase validation</string>
    <string name="next_word">Next word</string>
    <string name="next">Next</string>
    <string name="seed_missing_write">Show Seed Phrase again</string>
    <string name="seed_validate">In order to verify that you have written it correctly type words one by one on the next screen.</string>
    <string name="seed_transferred_words">You have seen your Seed Phrase.</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_message">Are you really want to cancel?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="repeat">Repeat</string>
    <string name="repeat_message">Restart the seed validation process?</string>
    <string name="to">TO</string>
    <string name="fee_description">Fee Rate affects how fast your transaction is going to be accepted in the blockchain.</string>
    <string name="donation_description">
        By donating to Multy you show your support and appreciation of a product.
        We are open-source project and your donation is the only source of profit for us.
    </string>
    <string name="select_wallet">Select Wallet:</string>
    <string name="donation_summ">Donation Sum</string>
    <string name="allow_donation_for_multy">Donate For Multy</string>
    <string name="donation_for_multy">Support Multy</string>
    <string name="fee_rate">Fee Rate</string>
    <string name="generate_new_address">Generate New Address</string>
    <string name="request_summ">Request Summ</string>
    <string name="share">Share:</string>
    <string name="contacts_bottombar">Contacts</string>
    <string name="wireless_scan">Wireless Scan</string>
    <string name="more_options">More \nOptions</string>
    <string name="slide_to_send">Slide to Send</string>
    <string name="sending_from">Sending From</string>
    <string name="hint_add_note">+ Add Note</string>
    <string name="recent_addresses">Recent Addresses</string>
    <string name="scan_qr">Scan \nQR</string>
    <string name="hint_search_or_enter_address">Search or Enter Address Here</string>
    <string name="btc">BTC</string>
    <string name="pay_for_commission">Pay for commission</string>
    <string name="spendable">Spendable:</string>
    <string name="max">MAX</string>
    <string name="close">Close</string>
    <string name="choose_amount">Please, choose amount</string>
    <string name="choose_transaction_speed">Please choose Fee Rate.</string>
    <string name="usd">USD</string>
    <string name="send_to">Send to</string>
    <string name="send_from">Send from</string>
    <string name="send_formatted" formatted="false">Send %s</string>
    <string name="transaction_fee">Transaction fee</string>
    <string name="ready_to_send">Ready to send</string>
    <string name="donation_default">0.0001</string>
    <string name="donation_format_pattern">##.##</string>
    <string name="donation_format_pattern_bitcoin">##.####</string>
    <string name="error_balance">Invalid amount to spend.</string>
    <string name="root_message">Sorry, rooted devices is not supported yet according to our safety policy. Please use our app on authorized device.</string>
    <string name="root_title">Root detected</string>
    <string name="ok">Okay</string>
    <string name="main">Main</string>
    <string name="my_wallets">My Wallets</string>
    <string name="all_addresses">All addresses</string>
    <string name="btc_address">BTC Address</string>
    <string name="btc_addresses">BTC Addresses</string>
    <string name="address_formatted">%s Address</string>
    <string name="addresses">Addresses</string>
    <string name="eth">ETH</string>
    <string name="tokens">Tokens</string>
    <string name="create">Create</string>
    <string name="reference_currency">Reference currency</string>
    <string name="create_wallet">Create Wallet</string>
    <string name="blockchain">Blockchain</string>
    <string name="select_chain">Select chain</string>
    <string name="select_currency">Select currency</string>
    <string name="wallet_name">Wallet Name</string>
    <string name="no_contacts">No contacts yet</string>
    <string name="no_contacts_message">This screen is not developed yet.</string>
    <string name="no_activity">No activity yet</string>
    <string name="no_activity_message">This screen is not developed yet.</string>
    <string name="multy_name_long">Multi cryptocurrency and\nassets open-source wallet</string>
    <string name="address_copied">Address was copied to clipboard</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="wallet_settings">Wallet Settings</string>
    <string name="general">General</string>
    <string name="security">Security</string>
    <string name="my_private_key">My Private Key</string>
    <string name="my_private_key_title">My private key:</string>
    <string name="show_private_keys">Show Private Keys</string>
    <string name="delete_wallet">Delete Wallet</string>
    <string name="delete_confirm">Are you sure want to delete this wallet?</string>
    <string name="save">Save</string>
    <string name="private_key_notification">Your extended private keys are all that is needed to\naccess your bitcoin funds. Be sure to protect your private\nkeys and store them only on secure devices.</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>
    <string name="share_key">Share</string>
    <string name="about_private_key">
        Private key allows you or anyone of you behave to
        spend your crypto assets. You should keep it secret!
    </string>
    <string name="about_delete_wallet">
        Remove this wallet from UI. Please note that we will be tracking wallet
        balance and notify you on incoming transactions.
    </string>
    <string name="us_dollars_usd">US Dollars ∙ USD</string>
    <string name="fast_operations">Fast Operations</string>
    <string name="nfc">NFC</string>
    <string name="scan">Scan</string>
    <string name="error">An error occurred</string>
    <string name="not_implemented">Sorry, this feature is not implemented</string>
    <string name="addresses_empty">There are no addresses</string>
    <string name="receive_summ">Receive Summ</string>
    <string name="receive_amount">Receive Amount</string>
    <string name="send_amount">Send Amount</string>
    <string name="input_symbols">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890</string>
    <string name="point">.</string>
    <string name="receive_summary">Receive summary</string>
    <string name="send_summary">Send summary</string>
    <string name="done">Done</string>
    <string name="create_first_wallet">Create First Wallet</string>
    <string name="restore_multy">Restore Multy</string>
    <string name="restore_wallet_description">Tap the button to create new or import existing wallet.</string>
    <string name="pending">Pending</string>
    <string name="outputs">Outputs</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="channel_id">Multy wallet</string>
    <string name="graph_title">24h BTC to USD graph</string>
    <string name="logo_title">Blockchain\nopen source wallet</string>
    <string name="backup_is_not_executed">Backup is needed!</string>
    <string name="wallet_removed">Wallet removed</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="zero_zero">0.0</string>
    <string name="show_all_addresses">Show All Addresses</string>
    <string name="operations_empty">You don\'t have\nany transactions</string>
    <string name="operations_create">Tap the button\nto create funds\nrequest</string>
    <string name="please_update">Please, delete your current version and install new one.</string>
    <string name="error_config_error">Unable to get config</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="no_internet_connection_message">Unfortunately you are not conencted\nto the network now. Multy needs\nconstant connection to provide it’s\nwork correctly</string>
    <string name="tree_dots">…</string>
    <string name="_or_">" or "</string>
    <string name="personal">Personal</string>
    <string name="locked_funds">Locked funds</string>
    <string name="pending_continue">Pending...</string>
    <string name="rejected_send">Unable to send transaction</string>
    <string name="rejected_receive">Unable to receive transaction</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="security_settings">Security Settings</string>
    <string name="settings_restore_seed_description">Seed Phrase is a major point of your Multy account. It’s absolutely unique and grant access your crypto assets. You should keep it secret!</string>
    <string name="restore_seed">Restore Seed</string>
    <string name="screen_lock">Screen Lock</string>
    <string name="none">None</string>
    <string name="about_multy">About multy</string>
    <string name="leave_feedback">Leave feedback</string>
    <string name="try_again">Try again</string>
    <string name="make_wallet_backup">Set up additional step for accessing your Multy application</string>
    <string name="use_screen_lock">Use screen lock</string>
    <string name="pin_code">PIN-code</string>
    <string name="fingerprint">Fingerprint</string>
    <string name="entrance_settings">Entrance Settings</string>
    <string name="repeat_pin">Repeat pin</string>
    <string name="enter_new_pin">Enter new pin</string>
    <string name="reset_data">By resetting all your data you will lose all your wallets and accounts on this device</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="reset_all_data">reset all data</string>
    <string name="entranse_settings_description">Set up additional step for accessing your Multy application.</string>
    <string name="reset_data_description">This function return the application to the initial state. All information will be permanently removed. Make sure that Seed Phrase backup was successfully done!</string>
    <string name="view_seed">View Seed</string>
    <string name="backup_seed">Backup Seed</string>
    <string name="enter_password">Enter Password</string>
    <string name="complete">Complete</string>
    <string name="success">Success!</string>
</resources>