<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2017 Idealnaya rabota LLC
  ~ Licensed under Multy.io license.
  ~ See LICENSE for details
  -->
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_main">

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:text="@string/main"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="130dp"
        android:layout_height="75dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:srcCompat="@drawable/logo_blue" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="41dp"
        android:background="@color/divider_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image" />

    <ImageView
        android:id="@+id/create_shadow"
        style="@style/FirstShadow"
        android:layout_marginTop="64dp"
        android:foreground="?attr/selectableItemBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:srcCompat="@drawable/ic_card_shadow" />

    <android.support.v7.widget.CardView
        android:id="@+id/button_create"
        style="@style/FirstCard"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/create_shadow"
        app:layout_constraintEnd_toEndOf="@+id/create_shadow"
        app:layout_constraintStart_toStartOf="@+id/create_shadow"
        app:layout_constraintTop_toTopOf="@+id/create_shadow" />

    <TextView
        android:id="@+id/text_create"
        style="@style/FirstText"
        android:drawableStart="@drawable/ic_wallet_create_new_bigger"
        android:text="@string/create_first_wallet"
        app:layout_constraintEnd_toEndOf="@+id/button_create"
        app:layout_constraintStart_toStartOf="@+id/button_create"
        app:layout_constraintBottom_toBottomOf="@id/button_create"
        app:layout_constraintTop_toTopOf="@+id/button_create" />

    <ImageView
        android:id="@+id/restore_shadow"
        style="@style/FirstShadow"
        android:layout_marginTop="4dp"
        android:foreground="?attr/selectableItemBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_create"
        app:srcCompat="@drawable/ic_card_shadow" />

    <android.support.v7.widget.CardView
        android:id="@+id/button_restore"
        style="@style/FirstCard"
        app:cardCornerRadius="12dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="@id/restore_shadow"
        app:layout_constraintEnd_toEndOf="@id/restore_shadow"
        app:layout_constraintStart_toStartOf="@id/restore_shadow"
        app:layout_constraintTop_toTopOf="@id/restore_shadow" />

    <TextView
        android:id="@+id/text_restore"
        style="@style/FirstText"
        android:drawableStart="@drawable/ic_restore_multy"
        android:text="@string/restore_multy"
        app:layout_constraintBottom_toBottomOf="@+id/button_restore"
        app:layout_constraintEnd_toEndOf="@+id/button_restore"
        app:layout_constraintStart_toStartOf="@+id/button_restore"
        app:layout_constraintTop_toTopOf="@+id/button_restore" />

</android.support.constraint.ConstraintLayout>